[package]
name = "tgpu"
version = "0.0.0"
authors = ["Peter Jin <peterhaijin@gmail.com>"]
edition = "2018"

#[features]
#default = ["gpu"]
#gpu = ["cudart", "parking_lot"]

[lib]
name = "tgpu"
path = "src/lib.rs"

[dependencies]
cudart = { git = "https://github.com/peterhj/cudart" }
gpurepr = { path = "../gpurepr" }
#gpurepr = { git = "https://github.com/peterhj/gpurepr" }
lazy_static = "*"
#memrepr = { path = "../memrepr" }
#memrepr = { git = "https://github.com/peterhj/memrepr" }
parking_lot = { version = "^0.7", features = ["nightly", "deadlock_detection"] }
